# pre-commit-hooks

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
pre_commit_hooks/: __init__.py  check_commit_size.py  utils.py
tests/: conftest.py  test_check_commit_size.py  test_utils.py
