[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pdesahb/pre-commit-hooks
author = Pierre de Sahb
author_email = pierre@sahb.me
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    PyYAML>=5.1
    identify>=2.0.0
    toml>=0.0.18
python_requires = >=3.9

[options.entry_points]
console_scripts =
    check-commit-size = pre_commit_hooks.check_commit_size:main
